scrollbar fix, daj mi spokoj dominik

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -9,6 +9,6 @@
 //   $color-pack: false
 // );
 //https://stackoverflow.com/questions/77665793/scrollbar-shown-by-default-using-vuetify-3
-//html {
-//  overflow-y: auto !important;
-//}
+html {
+  overflow-y: auto !important;
+}
